--- a/mvp/requirements.txt
+++ b/mvp/requirements.txt
@@ -26,3 +26,7 @@ SQLAlchemy==1.3.17
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
+
+# requirements for Heroku
+psycopg2==2.7.3.1
+gunicorn==19.7.1
