--- a/mvp/requirements.txt
+++ b/mvp/requirements.txt
@@ -17,10 +17,14 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
+numpy==1.18.4
+pandas==1.0.1
 PyJWT==1.7.1
+pymongo==3.10.1
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
+pytz==2020.1
 six==1.14.0
 SQLAlchemy==1.3.17
 visitor==0.1.3
