--- a/mvp/requirements.txt
+++ b/mvp/requirements.txt
@@ -1,17 +1,26 @@
 alembic==1.4.2
 blinker==1.4
+Brotli==1.0.7
 click==7.1.2
+dash==1.12.0
+dash-bootstrap-components==0.10.1
+dash-core-components==1.10.0
+dash-html-components==1.0.3
+dash-renderer==1.4.1
+dash-table==4.7.0
 dnspython==1.16.0
 dominate==2.5.1
 email-validator==1.1.1
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-Compress==1.5.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+future==0.18.2
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -19,12 +28,14 @@ Mako==1.1.2
 MarkupSafe==1.1.1
 numpy==1.18.4
 pandas==1.0.1
+plotly==4.8.1
 PyJWT==1.7.1
 pymongo==3.10.1
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
 pytz==2020.1
+retrying==1.3.3
 six==1.14.0
 SQLAlchemy==1.3.17
 visitor==0.1.3
