--- a/mvp/requirements.txt
+++ b/mvp/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.4.2
+astroid==2.4.1
 blinker==1.4
 Brotli==1.0.7
 click==7.1.2
+colorama==0.4.3
 dash==1.12.0
 dash-bootstrap-components==0.10.1
 dash-core-components==1.10.0
@@ -18,18 +20,23 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-Moment==0.9.0
+Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 future==0.18.2
 idna==2.9
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 numpy==1.18.4
 pandas==1.0.1
 plotly==4.8.1
 PyJWT==1.7.1
+pylint==2.5.2
 pymongo==3.10.1
 python-dateutil==2.8.1
 python-dotenv==0.13.0
@@ -38,8 +45,10 @@ pytz==2020.1
 retrying==1.3.3
 six==1.14.0
 SQLAlchemy==1.3.17
+toml==0.10.1
 visitor==0.1.3
 Werkzeug==1.0.1
+wrapt==1.12.1
 WTForms==2.3.1
 
 # requirements for Heroku
