javascript externo tabs na página inicial

--- a/mvp/.env
+++ b/mvp/.env
@@ -1,3 +1,4 @@
 SECRET_KEY=a-really-long-and-unique-key-that-nobody-knows
 MAIL_SERVER=localhost
 MAIL_PORT=25
+PATH=%PATH%;C:\Users\gmendonc\AppData\Local\Program Files\heroku\bin
